category fix